<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.foodbuzz.Activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/divider"
            android:textColorHint="@color/divider">

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/divider" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/divider"
            android:textColorHint="@color/divider">

            <EditText
                android:id="@+id/emailr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/divider" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/divider"
            android:textColorHint="@color/divider">

            <EditText
                android:id="@+id/passwordr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/divider" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/divider"
            android:textColorHint="@color/divider">

            <EditText
                android:id="@+id/passwordrc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:hint="@string/passc_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/divider" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/divider"
            android:textColorHint="@color/divider">

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:hint="@string/phone"
                android:inputType=""
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/divider" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/rreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/accent"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/member"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
